--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
 
         
         <meta charset="utf-8" />
-        <link rel="shortcut icon" href="../blog/img/me.ico" />
+        <link rel="shortcut icon" href="favicon.ico" />
         <title>鲁虺变卦易经八卦天干地支64卦卦象变卦·易经64卦</title>
         <meta name="keywords" content="鲁虺变卦易经八卦天干地支64卦卦象变卦·易经64卦">
 <meta name="description" content="鲁虺变卦易经八卦天干地支64卦卦象变卦·易经64卦">
         <link rel="stylesheet" type="text/css" href="css/styles.css" />
         
-        <script src="../blog/js/jquery-1.11.1.min.js" type="text/javascript"></script>
+        <script src="js/jquery-1.11.1.min.js" type="text/javascript"></script>
         <script src="js/index.js" type="text/javascript"></script>
     </head>
     <body>
         <div id="page-title">
-            <h2>变卦·易经64卦</h2>
+            <h2>鲁虺变卦·易经八卦64卦卦象</h2>
             <p>By <a href="http://luhui.net" target="_blank">鲁虺</a> Twitter: <a href="https://twitter.com/kugeceo" target="_blank">@luhui</a></p>
             <p>
                 <a href="https://twitter.com/intent/tweet?text=Fancy Website with CSS and JavaScript for Chinese 8 Gua&url=http://goo.gl/3S8z8t&original_referer=http://biangua.luhui.net&via=luhui&hashtags=CSS,JavaScript,webdesign,八卦,易经" class="social social-twitter" target="_blank"></a>
